Trocando imagens e cores

--- a/css/cards.css
+++ b/css/cards.css
@@ -28,7 +28,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0 .5);
+    background-color: rgba(0, 0, 0, .5);
     z-index: 1;
 }    
    
@@ -110,7 +110,7 @@
 
 .card.-post .box-content p{
     margin: 0;
-    color: rgba(0,0,0,.5);
+    color: rgb(0, 0, 0, 0.5);
 }
 
 @media (max-width: 991.98px){
