--- a/css/aside.css
+++ b/css/aside.css
@@ -42,7 +42,7 @@ aside .box.-box-tag .tags li{
 aside .box.-box-tag .tags li a{
     display: block;
     background-color: #000;
-    color: #fff;
+    color: rgb(255, 239, 8);
     padding: 10px 15px;
     font-size: 0.8em;
     text-transform: uppercase;
